# Simulation_of_the_4th_Krakow_bypass

./: .gitignore  CMakeLists.txt  Makefile  README.md  Simulation_of_the_4th_Krakow_bypass.pro  main.cpp
Bypass_GUI/: Bypass_GUI.pro  car_graphic.cpp  car_graphic.hpp  main.cpp  res.qrc  simulation_gui.cpp  simulation_gui.h  simulation_gui.hpp
bypass/: Bypass.cpp  Bypass.hpp  BypassSection.cpp  BypassSection.hpp  CMakeLists.txt  Car.cpp  Car.hpp  Junction.cpp  Junction.hpp  Road.cpp  Road.hpp  Simulation.cpp  Simulation.cpp.autosave  Simulation.hpp  Vehicle.cpp  Vehicle.hpp  vehicle.cpp
bypass_tests/: CMakeLists.txt
bypass_tests/basic_tests/: CMakeLists.txt  basic_check.cpp  basic_check.hpp  vehicle_check.cpp
